--- a/main.css
+++ b/main.css
@@ -11,7 +11,7 @@
 body {
     /* background-image: linear-gradient(rgba(62, 20, 20, 0.4), rgba(62, 20, 20, 0.4), url(back.jpg)); */
     height: 100vh;
-    background-image: url(/src/Images/diceB.jpg);
+    background-image: url(src/Images/diceB.jpg);
     background-size: contain;
     background-position: center;
     font-family: Lato;
@@ -122,7 +122,7 @@ ul {
     float: left;
     height: 600px;
     padding: 100px;
-    background-image: url(/src/Images/jersy.png);
+    background-image: url(src/Images/jersy.png);
     background-repeat: no-repeat;
     background-position: center;
 }
@@ -385,7 +385,7 @@ button:hover {
 }
 
 .winnerClass {
-    background: url(/src/Images/jersy.png), url(/src/Images/UntidySickHairstreak-size_restricted.gif);
+    background: url(src/Images/jersy.png), url(src/Images/UntidySickHairstreak-size_restricted.gif);
     background-repeat: no-repeat;
     background-position: center;
 }
@@ -437,7 +437,7 @@ button:hover {
 
 /* DICE FACES */
 #nr1 {
-    background-image: url("/src/Images/dice-1.png");
+    background-image: url("src/Images/dice-1.png");
     background-position: center;
     background-size: cover;
     transform: rotateY(0deg) translateZ(45px);
@@ -445,7 +445,7 @@ button:hover {
 }
 
 #nr2 {
-    background-image: url("/src/Images/dice-2.png");
+    background-image: url("src/Images/dice-2.png");
     background-position: center;
     background-size: cover;
     transform: rotateY(90deg) translateZ(45px);
@@ -453,7 +453,7 @@ button:hover {
 }
 
 #nr3 {
-    background-image: url("/src/Images/dice-3.png");
+    background-image: url("src/Images/dice-3.png");
     background-position: center;
     background-size: cover;
     transform: rotateY(180deg) translateZ(45px);
@@ -461,7 +461,7 @@ button:hover {
 }
 
 #nr4 {
-    background-image: url("/src/Images/dice-4.png");
+    background-image: url("src/Images/dice-4.png");
     background-position: center;
     background-size: cover;
     transform: rotateY(-90deg) translateZ(45px);
@@ -469,7 +469,7 @@ button:hover {
 }
 
 #nr5 {
-    background-image: url("/src/Images/dice-5.png");
+    background-image: url("src/Images/dice-5.png");
     background-position: center;
     background-size: cover;
     transform: rotateX(90deg) translateZ(45px);
@@ -477,7 +477,7 @@ button:hover {
 }
 
 #nr6 {
-    background-image: url("/src/Images/dice-6.png");
+    background-image: url("src/Images/dice-6.png");
     background-position: center;
     background-size: cover;
     transform: rotateX(-90deg) translateZ(45px);
